tests/typing/bad/testfile-constructor1-1.scala
class A {
    def m() { var a: A = new A(42) }
}
object Main { def main(args: Array[String]) { } }
